--- a/practice.css
+++ b/practice.css
@@ -21,8 +21,12 @@ body {}
         width: 100% !important;
     }
 
-    .mynav-middle-items {
-        color: black !important;
+    .fa-bars:before {
+        color: white;
+    }
+
+    .navbar-toggler {
+        outline: none !important;
     }
 
     .number-element-title {
@@ -82,13 +86,11 @@ body {}
 } */
 
 .bg-dark {
-    background: transparent !important;
+
     transition: 0.75s ease;
+    background-color: black !important;
 }
 
-.bg-dark.scrolled {
-    background: black !important;
-}
 
 .mynav-middle-items.scrolled {
     color: black;
@@ -99,7 +101,7 @@ body {}
 }
 
 .mynav {
-    width: 90%;
+
     margin: auto;
     border: 2px solid rgb(116 98 98 / 18%);
     border-radius: 4px;
@@ -134,6 +136,8 @@ body {}
     color: #86bb46;
 
 }
+
+.mynav-searchbar {}
 
 /*---------NAVBAR-END-----*/
 
@@ -315,6 +319,7 @@ body {}
     padding-left: 15px;
     padding-right: 15px;
     margin: auto;
+    outline: none !important;
     background-color: #86bb46;
     color: white;
     display: inline-block;
@@ -323,6 +328,12 @@ body {}
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+.get-in-touch-button:hover {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+}
 
 
 /*---------GET-IN-TOUCH-END-----*/
